# TLSZMQ

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.crt  client.key  server.crt  server.key  tls_wrapper.cpp  tls_wrapper.h  tlsclient.cpp  tlsserver.cpp  tlszmq.cpp  tlszmq.h  zmqchannel.h
certs/: ca.crt
cmake/: FindZeroMQ.cmake
src/: tlsclient.cc  tlsclient.h  tlsserver.cc  tlsserver.h  tlswrapper.cc  zmqchannel.h
test/: test_tlsclient.cc  test_tlsserver.cc
